Removed rainbow cta border and made it blue, adjusted the starry background, adjusted faq circular issues on safari/ios.

--- a/src/components/atoms/CtaButton/CtaButton.css
+++ b/src/components/atoms/CtaButton/CtaButton.css
@@ -1,6 +1,6 @@
 .button-85 {
-    background: #111;
-    border: solid 1px #FFF;
+    background: #2561da;
+    /* border: solid 1px #FFF; */
     border-radius: 25px;
     bottom: 7rem;
     color: #FFF;
