--- a/src/components/atoms/FAQ/Faq.css
+++ b/src/components/atoms/FAQ/Faq.css
@@ -54,13 +54,15 @@ details > summary {
   }
   
   .faq svg {
+    box-sizing: border-box;
     background-color: #0d0d0d;
-    border-radius: 999px;
-    height: 2.25rem;
-    width: 2.25rem;
+    border-radius: 50%;
+    height: 1.75rem;
+    width: 1.75rem;
     padding: 5px;
     transition: transform ease-in-out 0.15s;
-  }
+    display: block;
+  }  
   
   details[open] > summary > svg {
     /* color: #ffa500; */
